Bug 361677 - Kleopatra does not accept IDNA encoded domains for E-Mail address
Summary: Kleopatra does not accept IDNA encoded domains for E-Mail address
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-12 16:04 UTC by K. Frör
Modified: 2016-08-04 13:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description K. Frör 2016-04-12 16:04:02 UTC
my e-mail is kontakt@praxis-frör.de or, since the ö doesn't always work, kontakt@xn--praxis-frr-mcb.de The system doesn't allow to write one - after the other, like in xn--praxis, etc.
It's possible to create the personal key for the kontakt@praxis-frör.de e-mail, but the mail leaves Outlook in the other version, so it can't be identified correctly. What can I do?

Reproducible: Always
Comment 1 Andre Heinecke 2016-04-12 16:23:11 UTC
Thanks for your report. I can reproduce your Problem with Kleopatra and it works with GnuPG on the command line so this is indeed a Bug in Kleopatra.

As a workaround you can use gnupg directly from the command line. Start the command line window  cmd.exe

Enter:
gpg2 --gen-key
And follow the instructions to generate your Certificate this will accept kontakt@xn--praxis-frr-mcb.de 

Alternatively you can use --edit-key and the adduid command to add a user ID to your existing key.

Just search the web for "GnuPG adduid windows" and you should find something.
Comment 2 K. Frör 2016-04-13 10:57:47 UTC
Thanks a lot for your help, I will try that. 
Karin
__________________________
616982100/890050768
Dipl.-Psych. Karin Frör
Hauptstr. 68
73087 Bad Boll
Tel.: 07164/7997911
Fax: 07164/7999043
kontakt@praxis-frör.de

-----Ursprüngliche Nachricht-----
Von: Andre Heinecke via KDE Bugzilla [mailto:bugzilla_noreply@kde.org] 
Gesendet: Dienstag, 12. April 2016 18:23
An: kontakt@praxis-frör.de
Betreff: [kleopatra] [Bug 361677] Kleopatra does not accept IDNA encoded domains for E-Mail address

https://bugs.kde.org/show_bug.cgi?id=361677

Andre Heinecke <aheinecke@intevation.de> changed:

           What    |Removed                     |Added
----------------------------------------------------------------------------
     Ever confirmed|0                           |1
             Status|UNCONFIRMED                 |CONFIRMED
            Summary|When I try to create my     |Kleopatra does not accept
                   |personal key for the GpgOL  |IDNA encoded domains for
                   |certificate, my e-mail is   |E-Mail address
                   |not accepted                |

--- Comment #1 from Andre Heinecke <aheinecke@intevation.de> --- Thanks for your report. I can reproduce your Problem with Kleopatra and it works with GnuPG on the command line so this is indeed a Bug in Kleopatra.

As a workaround you can use gnupg directly from the command line. Start the command line window  cmd.exe

Enter:
gpg2 --gen-key
And follow the instructions to generate your Certificate this will accept kontakt@xn--praxis-frr-mcb.de 

Alternatively you can use --edit-key and the adduid command to add a user ID to your existing key.

Just search the web for "GnuPG adduid windows" and you should find something.

--
You are receiving this mail because:
You reported the bug.
Comment 3 Andre Heinecke 2016-08-04 13:11:53 UTC
Git commit d21ccf3659023f21b62e52e741ec83faae12bdd6 by Andre Heinecke.
Committed on 04/08/2016 at 12:48.
Pushed by aheinecke into branch 'master'.

Replace broken EMail validator by KEmailAddress

The current one failed for internationalized domain names
and was both too restrictive and too lenient. Let's leave
E-Mail validation to the experts (KEMailAddress).

M  +6    -69   src/utils/validation.cpp

http://commits.kde.org/kleopatra/d21ccf3659023f21b62e52e741ec83faae12bdd6