Replace broken EMail validator by KEmailAddress

The current one failed for internationalized domain names
and was both too restrictive and too lenient. Let's leave
E-Mail validation to the experts (KEMailAddress).

BUG: 361677